2008-07-23  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* ConsiderUsingStaticTypeRule.cs: Fix the rule in order to avoid false
	positives with empty clases and inheritance.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidMultidimensionalIndexerRule.cs: New. Rule that warns if 
	indexers using multidimentional indexes are found.
	* PreferIntegerOrStringForIndexersRule.cs: New. Rule that warns 
	if indexers uses something other that string, integers or object as 
	their index.
	* Gendarme.Rules.Design.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to the build.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersRule.cs: New. Rule to warn for visible API
	that expose ref or out parameters. This help keeping the public API 
	as simple as possible.
	* ConsiderConvertingFieldToNullableRule.cs: Change some methods (using
	ref) from protected (no need) to private.
	* Gendarme.Rules.Design.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to the build.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderUsingStaticTypeRule.cs: New. Rule that warn if a type 
	could be changed into a static type. This rule is 2.0+ specific.
	* Makefile.am: Add rule and test to the build.

2008-07-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Rebuild if the framework has changed.

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidVisibleNestedTypesRule.cs: New. Rule that warn about nested 
	types that are visible.
	* Gendarme.Rules.Design.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and test to the build.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* DisposableFieldsShouldBeDisposedRule.cs: Simplify finding 
	Dispose	methods a bit (self-test).

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* UsingCloneWithoutImplementingICloneableRule.cs: Change rule
	not to warn when Clone return something else than System.Object 